@@ -187,4 +187,5 @@ a
   ***   at top-level: printf("%c",'x)
   ***                 ^---------------
   *** printf: incorrect type in gtolong (t_POL).
-Total time spent: 0
+-0.0000000000000000000000000000000000000029387
+Total time spent: 4
