@@ -74,3 +74,6 @@ printf("%c",97 + 0.*I)
 printf("%c",97 +0*quadgen(5))
 printf("%1.2f",Mat([1.,2.]))
 printf("%c",'x)
+
+default(format,"f.5")
+-0.00000000000000000000000000000000000000293873587705572
