@@ -126,6 +126,8 @@ VBr83- [darwin] remove obsolete linker options that cause crashes [#1623]
        E.g. f(x)=(x<0,1/(1+(-x)^(3/2)), 1/(1+x^(5/2)));
    94- intnum(x=[0,-1/2],[1,-1/3], x^(-1/2) + (1-x)^(-1/3)) -> error [didn't
        suport singularities at both endpoints]
+   95- buffer overflow after default(format,"f.precision") (whenever many
+       initial zeroes)
 
   Added
     1- add optional argument to sumdigits to specify the base
